     NB. RCS ID sync only for portable
   - djm@cvs.openbsd.org 2007/08/23 03:22:16
     [auth2-none.c sshd_config sshd_config.5]
     Support "Banner=none" to disable displaying of the pre-login banner;
     ok dtucker@ deraadt@
   - djm@cvs.openbsd.org 2007/08/23 03:23:26
     [sshconnect.c]
     Execute ProxyCommands with $SHELL rather than /bin/sh unconditionally

20070914
 - (dtucker) [openbsd-compat/bsd-asprintf.c] Plug mem leak in error path.
   Patch from Jan.Pechanec at sun com.

20070910
 - (dtucker) [openbsd-compat/regress/closefromtest.c] Bug #1358: Always
   return 0 on successful test.  From David.Leonard at quest com.
 - (tim) [configure.ac] Autoconf didn't define HAVE_LIBIAF because we
   did a AC_CHECK_FUNCS within the AC_CHECK_LIB test.

20070817
 - (dtucker) [sshd.8] Many Linux variants use a single "!" to denote locked
   accounts and that's what the code looks for, so make man page and code
   agree.  Pointed out by Roumen Petrov.
 - (dtucker) [INSTALL] Group the parts describing random options and PAM
   implementations together which is hopefully more coherent.
 - (dtucker) [INSTALL] the pid file is sshd.pid not ssh.pid.
 - (dtucker) [INSTALL] Give PAM its own heading.
 - (dtucker) [INSTALL] Link to tcpwrappers.

20070816
 - (dtucker) [session.c] Call PAM cleanup functions for unauthenticated
   connections too.  Based on a patch from Sandro Wefel, with & ok djm@

20070815
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2007/08/15 08:14:46
     [clientloop.c]
     do NOT fall back to the trused x11 cookie if generation of an untrusted
     cookie fails; from Jan Pechanec, via security-alert at sun.com;
     ok dtucker
   - markus@cvs.openbsd.org 2007/08/15 08:16:49
     [version.h]
     openssh 4.7
   - stevesk@cvs.openbsd.org 2007/08/15 12:13:41
     [ssh_config.5]
     tun device forwarding now honours ExitOnForwardFailure; ok markus@
 - (dtucker) [openbsd-compat/bsd-cray.c] Remove debug from signal handler.
   ok djm@